CSS Style applied

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Page</title>
+    <title>Learnguage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Languange Learning</h1>
+        <h1>English Learning</h1>
             <nav>
                 <ul>
                     <li><a href="/index.html">Main</a></li>
-                    <li><a href="/vocabulario.html">Vocabulary</a></li>
-                    <li><a href="/grammar.html">Grammar</a></li>
-                    <li><a href="/exercises.html">Exercises</a></li>
-                    <li><a href="/audios.html">Audios</a></li>
+                    <li><a>Vocabulary</a></li>
+                    <li><a>Grammar</a></li>
+                    <li><a>Exercises</a></li>
+                    <li><a>Audios</a></li>
                 </ul>
             </nav>
     </header>
@@ -30,12 +29,26 @@
             <h2>Numbers</h2>
             <p>All about numbers</p>
         </section>
+        <section id="smalltalk">
+            <h2>Small Talk</h2>
+            <p>Daily basic Conversation</p>
+        </section>
+        <section id="gettingaround">
+            <h2>Getting Around</h2>
+            <p>How to not get lost</p>
+        </section>
+        <section id="buyinggroceries">
+            <h2>In the Supermarket</h2>
+            <p>Buying some groceries</p>
+        </section>
+        <section id="prices">
+            <h2>Dealing with Prices</h2>
+            <p>Is it too expensive for you?</p>
+        </section>
         <!-- Add more sections as needed -->
     </main>
     <footer>
         <p>www.learnanewlanguage.com</p>
     </footer>
-    
-    <script src="script.js"></script>
 </body>
 </html>
